feat(home) : add first section HTML and CSS

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,84 @@
-/* You can add global styles to this file, and also import other style files */
+@use '../src/variables' as v;
+
+/* 1. Use a more-intuitive box-sizing model */
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
+/* 2. Remove default margin */
+* {
+  margin: 0;
+}
+
+/*Définis 1rem à 10px*/ 
+html {
+	font-size: 0.625rem
+}
+
+body {
+ /* Redonne la taille de base des textes à 16px pour ne pas perdre l'utilisateur*/
+  font-size: 1.6rem;
+  /* 3. Add accessible line-height */
+  line-height: 1.5;
+  /* 4. Improve text rendering */
+  -webkit-font-smoothing: antialiased;
+}
+
+/* 5. Improve media defaults */
+img, picture, video, canvas, svg {
+  display: block;
+  max-width: 100%;
+}
+
+/* 6. Inherit fonts for form controls */
+input, button, textarea, select {
+  font: inherit;
+}
+
+/* 7. Avoid text overflows */
+p, h1, h2, h3, h4, h5, h6 {
+  overflow-wrap: break-word;
+}
+
+/* 8. Improve line wrapping */
+p {
+  text-wrap: pretty;
+}
+h1, h2, h3, h4, h5, h6 {
+  text-wrap: balance;
+}
+
+/*
+  9. Create a root stacking context
+*/
+#root, #__next {
+  isolation: isolate;
+}
+
+main {
+    background-color: v.$beige;
+    padding: 1rem;
+}
+
+
+button {
+    background-color: v.$beige;
+    border-radius: 8px;
+    padding: 0.5rem 1rem;
+    border: none;
+    box-shadow: lightgray 3px 3px 7px;
+    font-size: 1rem;
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+
+    &:hover {
+        background-color: azure;
+    }
+
+    &:active {
+        transform: translate(1px, 1px);
+        box-shadow: lightgray 0 0 5px;
+    }
+
+}
