--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,36 @@
 <header></header>
 
-<main class="main">
-  <h1>Test</h1>
+<main>
+
+  <section class="presentation">
+    <img class="presentation__image" src="assets/images/background.jpg" alt="Bddddrosse à dent en bois éco-responsable sur un petit sac">
+    <div class="presentation__container">
+      <h1 class="presentation__title">Consommez mieux,</h1>
+      <h1 class="presentation__title">vivez mieux</h1>
+      <button class="presentation__button">Voir la boutique</button>
+    </div>
+  </section>
+
+  <section>
+    <h2>Nos Produits Populaires</h2>
+    <div>
+
+      <div>
+        <button>Ajouter au panier</button>
+        <img src="" alt="">
+        <div>
+          <div>
+            <h3>Produit 1</h3>
+            <p>Description du produit 1</p>
+          </div>
+          <p>Prix €</p>
+        </div>
+      </div>
+      
+
+    </div>
+  </section>
+
 </main>
 
-<footer></footer>
+<footer></footer> 
