feat(home) : add second section HTML and CSS

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,36 +1,7 @@
-<header></header>
+<app-header/>
 
 <main>
-
-  <section class="presentation">
-    <img class="presentation__image" src="assets/images/background.jpg" alt="Bddddrosse à dent en bois éco-responsable sur un petit sac">
-    <div class="presentation__container">
-      <h1 class="presentation__title">Consommez mieux,</h1>
-      <h1 class="presentation__title">vivez mieux</h1>
-      <button class="presentation__button">Voir la boutique</button>
-    </div>
-  </section>
-
-  <section>
-    <h2>Nos Produits Populaires</h2>
-    <div>
-
-      <div>
-        <button>Ajouter au panier</button>
-        <img src="" alt="">
-        <div>
-          <div>
-            <h3>Produit 1</h3>
-            <p>Description du produit 1</p>
-          </div>
-          <p>Prix €</p>
-        </div>
-      </div>
-      
-
-    </div>
-  </section>
-
+  <router-outlet/>
 </main>
 
 <footer></footer> 
