--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,8 @@
 /* 2. Remove default margin */
 * {
   margin: 0;
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
 }
 
 /*Définis 1rem à 10px*/ 
@@ -55,14 +57,18 @@ h1, h2, h3, h4, h5, h6 {
   isolation: isolate;
 }
 
-main {
-    background-color: v.$beige;
+body {
+    background-color: v.$white;
     padding: 1rem;
+}
+
+section {
+    margin: 0;
 }
 
 
 button {
-    background-color: v.$beige;
+    background-color: v.$white;
     border-radius: 8px;
     padding: 0.5rem 1rem;
     border: none;
@@ -71,9 +77,10 @@ button {
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
+    cursor: pointer;
 
     &:hover {
-        background-color: azure;
+        background-color: v.$beige;
     }
 
     &:active {
@@ -81,4 +88,11 @@ button {
         box-shadow: lightgray 0 0 5px;
     }
 
+}
+
+h2 {
+    font-size: 3rem;
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
