--- a/src/app/layouts/header/header.html
+++ b/src/app/layouts/header/header.html
@@ -1,17 +1,21 @@
-<div class="header">
+<header class="header">
 
-    <button class="header__button-menu">
+    <!-- Menu burger -->
+    <button class="header__button-menu" (click)="toggleMenuBurger()">
         <span class="material-icons">menu</span>
     </button>
     
+    <!-- Logo -->
     <a href="" class="header__title">GreenShop</a>
     
-    <a href="" class="header__cart" >Panier (0)</a>
-
-    <!-- <nav>    
-        <a href="">Accueil</a>
-        <a href="">Produits</a>
-        <a href="">Contact</a>
-    </nav> -->
+    <!-- Menu -->
+    <nav [class.open]="isMenuOpen" class="header__nav">   
+        <a href="" class="header__link">Accueil</a>
+        <a href="" class="header__link">Produits</a>
+        <a href="" class="header__link">Contact</a>
+    </nav>
     
-</div>
+    <!-- Panier -->
+    <a href="" class="header__cart" >Panier (0)</a>
+    
+</header>
