--- a/src/app/pages/product-page/product-page.html
+++ b/src/app/pages/product-page/product-page.html
@@ -1,15 +1,14 @@
-<section class="presentation">
-    <img class="presentation__image" src="assets/images/background.jpg" alt="Bddddrosse à dent en bois éco-responsable sur un petit sac">
-    <div class="presentation__container">
-      <h1 class="presentation__title">Consommez mieux,</h1>
-      <h1 class="presentation__title">vivez mieux</h1>
-      <button routerLink="produits" class="presentation__button">Voir la boutique</button>
+<section class="product-filter">
+    <div class="product-filter__container" role="group" aria-label="Filtrer par catégorie">
+        <button class="product-filter__button" type="button">Tous</button>
+        <button class="product-filter__button" type="button">Cuisine</button>
+        <button class="product-filter__button" type="button">Maison</button>
+        <button class="product-filter__button" type="button">Bien-être</button>
     </div>
 </section>
 
 
 <section class="popular-products">
-    <h2 class="popular-products__title">Nos Produits Populaires</h2>
     <div class="popular-products__list">
         <div class="popular-products__card product-card">
             <button class="product-card__button">Ajouter au panier</button>
@@ -36,6 +35,18 @@
         </div>
 
         <div class="popular-products__card product-card">
+            <button class="product-card__button">Ajouter au panier</button>
+            <img class="product-card__image" src="assets/images/tasse.jpg" alt="Un savon posé sur les feuilles d'une plante">
+            <div class="product-card__container">
+            <div class="product-card__text">
+                <h3 class="product-card__title">Savon à l'orange douce</h3>
+                <p class="product-card__description">Savon bio et éco éco-responsable aux vertues apaisantes.</p>
+            </div>
+            <p class="product-card__price">8.90 €</p>
+            </div>
+        </div>
+
+         <div class="popular-products__card product-card">
             <button class="product-card__button">Ajouter au panier</button>
             <img class="product-card__image" src="assets/images/tasse.jpg" alt="Un savon posé sur les feuilles d'une plante">
             <div class="product-card__container">
