--- a/src/app/pages/product-page/product-page.html
+++ b/src/app/pages/product-page/product-page.html
@@ -8,54 +8,13 @@
 </section>
 
 
-<section class="popular-products">
-    <div class="popular-products__list">
-        <div class="popular-products__card product-card">
-            <button class="product-card__button">Ajouter au panier</button>
-            <img class="product-card__image" src="assets/images/soin.jpg" alt="Un savon posé sur les feuilles d'une plante">
-            <div class="product-card__container">
-            <div class="product-card__text">
-                <h3 class="product-card__title">Savon à l'orange douce</h3>
-                <p class="product-card__description">Savon bio et éco éco-responsable aux vertues apaisantes.</p>
-            </div>
-            <p class="product-card__price">8.90 €</p>
-            </div>
-        </div>
+<section class="all-products">
+ 
+    <div class="all-products__list">
 
-        <div class="popular-products__card product-card">
-            <button class="product-card__button">Ajouter au panier</button>
-            <img class="product-card__image" src="assets/images/maquillage.jpg" alt="Un savon posé sur les feuilles d'une plante">
-            <div class="product-card__container">
-            <div class="product-card__text">
-                <h3 class="product-card__title">Savon à l'orange douce</h3>
-                <p class="product-card__description">Savon bio et éco éco-responsable aux vertues apaisantes.</p>
-            </div>
-            <p class="product-card__price">8.90 €</p>
-            </div>
-        </div>
+        @for (product of products; track product.id) {
+            <app-product-component [product]="product" class="all-products__card"/>
+        }
 
-        <div class="popular-products__card product-card">
-            <button class="product-card__button">Ajouter au panier</button>
-            <img class="product-card__image" src="assets/images/tasse.jpg" alt="Un savon posé sur les feuilles d'une plante">
-            <div class="product-card__container">
-            <div class="product-card__text">
-                <h3 class="product-card__title">Savon à l'orange douce</h3>
-                <p class="product-card__description">Savon bio et éco éco-responsable aux vertues apaisantes.</p>
-            </div>
-            <p class="product-card__price">8.90 €</p>
-            </div>
-        </div>
-
-         <div class="popular-products__card product-card">
-            <button class="product-card__button">Ajouter au panier</button>
-            <img class="product-card__image" src="assets/images/tasse.jpg" alt="Un savon posé sur les feuilles d'une plante">
-            <div class="product-card__container">
-            <div class="product-card__text">
-                <h3 class="product-card__title">Savon à l'orange douce</h3>
-                <p class="product-card__description">Savon bio et éco éco-responsable aux vertues apaisantes.</p>
-            </div>
-            <p class="product-card__price">8.90 €</p>
-            </div>
-        </div>
     </div>
 </section>
