--- a/src/app/pages/product-page/product-page.scss
+++ b/src/app/pages/product-page/product-page.scss
@@ -38,7 +38,7 @@
 /*---------------------------------------------------------------------------------------------------------*/
 /*----------------------------------- SECTION POPULAR PRODUCT ---------------------------------------------*/
 
-.popular-products {
+.all-products {
     margin-top: 2rem;
     margin-left: calc(5vw - 1rem);
     width: 90vw;
@@ -46,79 +46,44 @@
     flex-direction: column;
     align-items: center;
 
-    &__title {
-        margin-bottom: 2rem;
-        text-align: center;
-    }
-
     &__list {
         display: flex;
         flex-direction: column;
         width: 90%;
         row-gap: 5rem;
     }
-
-    .product-card {
-        width: 100%;
-        height: 550px;
-        position: relative;
-        display: flex;
-        flex-direction: column;
-        cursor: pointer;
-
-        transition: transform 0.3s ease;
-
-        &:hover {
-            transform: translateY(-5px);
-        }
-
-        &__button {
-            position: absolute;
-            top: 1rem;
-            right: 1rem;
-            box-shadow: none;
-        }
-
-        &__image {
-            width: 100%;
-            height: 80%;
-            object-fit: cover;
-            border-radius: 5px;
-        }
-
-        &__container {
-            width: 100%;
-            height: 20%;
-        }
-
-        &__title {
-            margin-top: 1rem;
-        }
-
-        &__description {
-            font-size: 1.3rem;
-            margin-bottom: 1rem;
-        }
-
-        &__price {
-            font-weight: 500;
-        }
-    }
 }
 
 @media screen and (min-width : 768px) {
-    .popular-products__list {
-        flex-direction: row;
-        justify-content: space-between;
-        row-gap: 0;
-        column-gap: 3rem;
-        width: 90vw;
+    .all-products {
+    
+        &__list {
+            flex-direction: row;
+            justify-content: flex-start;
+            row-gap: 5rem;
+            column-gap: 3rem;
+            width: 90vw;
+            flex-wrap: wrap;
+        }
+
+        &__card {
+            min-width: 330px;
+            width: 31%;
+        }
     }
 }
 
 
 @media screen and (min-width : 1340px) {
-    .popular-products__list {
-        width: 90vw;
+    .all-products {
+    
+        &__list {
+            width: 90vw;
+        }
+
+        &__card {
+            min-width: 330px;
+            width: 22%;
+        }
     }
 }
