--- a/src/app/components/product-component/product-component.html
+++ b/src/app/components/product-component/product-component.html
@@ -1,4 +1,4 @@
-<div class="product-card">
+<div class="product-card" (click)="showProductPage()">
     <button class="product-card__button">Ajouter au panier</button>
     <img class="product-card__image" [src]="product.imageUrl" [alt]="product.name">
     <div class="product-card__container">
