--- a/src/app/pages/single-page-product/single-page-product.scss
+++ b/src/app/pages/single-page-product/single-page-product.scss
@@ -1,47 +1,114 @@
+@use '../../../variables' as v;
+
 .single-page {
     margin-top: 7rem;
     width: 100%;
-    height: 550px;
     position: relative;
     display: flex;
     flex-direction: column;
-    cursor: pointer;
-
-    transition: transform 0.3s ease;
-
-    &:hover {
-        transform: translateY(-5px);
-    }
 
     &__button {
-        position: absolute;
-        top: 1rem;
-        right: 1rem;
-        box-shadow: none;
+        width : 10rem;
+        font-size: 1.5rem;
     }
 
     &__image {
         width: 100%;
-        height: 80%;
+        height: 400px;
         object-fit: cover;
+        margin-top: 2rem;
         border-radius: 5px;
     }
 
-    &__container {
-        width: 100%;
-        height: 20%;
-    }
-
     &__title {
-        margin-top: 1rem;
+        margin-top: 1.5rem;
+        font-size: 2.5rem;
     }
 
     &__description {
-        font-size: 1.3rem;
-        margin-bottom: 1rem;
+        font-size: 1.7rem;
+        margin-top: 1rem;
+        margin-bottom: 1.5rem;
+    }
+
+    &__infos {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    &__category {
+        background-color: v.$beige;
+        color: v.$brown;
+        border-radius: 5px;
+        padding: 1rem;
     }
 
     &__price {
-        font-weight: 500;
+        font-size: 2rem;
+        font-weight: 700;
     }
+
+    &__add-cart {
+        margin-top: 2rem;
+        font-size: 2rem;
+        font-weight: 300;
+        background-color: v.$green;
+        color: v.$white;
+        width: 100%;
+        border-radius: 5rem;
+
+        &:hover {
+            background-color: v.$darkgreen;
+        }
+    }
+}
+
+@media screen and (min-width : 768px) {
+    .single-page {
+        margin-top: 9rem;
+        width: 90%;
+        margin-left: 5%;
+
+        &__button {
+            font-size: 2rem;
+        }
+
+        &__image {
+            width : 45%;
+            margin: 0;
+        }
+
+        &__container {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 3rem;
+        }
+
+        &__right-element {
+            width: 50%;
+            padding: 2rem;
+        }
+
+        &__infos {
+            flex-direction: column;
+        }
+
+        &__category {
+            display: inline;
+            text-align: center;
+            width: 10rem;
+            margin-top: 3rem;
+        }
+
+        &__price {
+            margin-top: 3rem;
+        }
+
+        &__add-cart {
+            font-size: 1.5rem;
+            padding: 1rem 3rem;
+            width: auto;
+        }
+    }
+    
 }
