--- a/src/app/components/product-component/product-component.html
+++ b/src/app/components/product-component/product-component.html
@@ -2,10 +2,10 @@
     <button class="product-card__button">Ajouter au panier</button>
     <img class="product-card__image" [src]="product.imageUrl" [alt]="product.name">
     <div class="product-card__container">
-    <div class="product-card__text">
-        <h3 class="product-card__title">{{product.name}}</h3>
-        <p class="product-card__description">{{product.description}}</p>
-    </div>
-    <p class="product-card__price">{{product.price}} €</p>
+        <div class="product-card__text">
+            <h3 class="product-card__title">{{product.name}}</h3>
+            <p class="product-card__description">{{product.description}}</p>
+        </div>
+    <p class="product-card__price">{{product.price | number : '1.2-2'}} €</p>
     </div>
 </div>
