--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -86,67 +86,34 @@
         width: 90%;
         row-gap: 5rem;
     }
-
-    .product-card {
-        width: 100%;
-        height: 550px;
-        position: relative;
-        display: flex;
-        flex-direction: column;
-        cursor: pointer;
-
-        transition: transform 0.3s ease;
-
-        &:hover {
-            transform: translateY(-5px);
-        }
-
-        &__button {
-            position: absolute;
-            top: 1rem;
-            right: 1rem;
-            box-shadow: none;
-        }
-
-        &__image {
-            width: 100%;
-            height: 80%;
-            object-fit: cover;
-            border-radius: 5px;
-        }
-
-        &__container {
-            width: 100%;
-            height: 20%;
-        }
-
-        &__title {
-            margin-top: 1rem;
-        }
-
-        &__description {
-            font-size: 1.3rem;
-            margin-bottom: 1rem;
-        }
-
-        &__price {
-            font-weight: 500;
-        }
-    }
 }
 
 @media screen and (min-width : 768px) {
-    .popular-products__list {
-        flex-direction: row;
-        row-gap: 0;
-        column-gap: 3rem;
-        width: 80vw;
+    .popular-products {
+    
+        &__list {
+            flex-direction: row;
+            row-gap: 0;
+            column-gap: 3rem;
+            width: 80vw;
+        }
+
+        &__card {
+            width: calc(80vw / 3);
+        }
     }
 }
 
 
 @media screen and (min-width : 1340px) {
-    .popular-products__list {
-        width: 60vw;
+    .popular-products {
+    
+        &__list {
+            width: 70vw;
+        }
+        
+        &__card {
+            width: calc(70vw / 3);
+        }
     }
 }
