feat(app) : add footer

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,7 @@
-<app-header/>
+<app-header class="app-header"/>
 
-<main>
+<main class="app-main">
   <router-outlet/>
 </main>
 
-<footer></footer> 
+<app-footer class="app-footer"/>
