--- a/src/app/layouts/header/header.html
+++ b/src/app/layouts/header/header.html
@@ -11,7 +11,7 @@
     <!-- Menu -->
     <nav [class.open]="isMenuOpen" class="header__nav">   
         <a routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" class="header__link">Accueil</a>
-        <a routerLink="produits" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" class="header__link">Produits</a>
+        <a routerLink="produits" routerLinkActive="active" class="header__link">Produits</a>
         <a routerLink="contact" routerLinkActive="active" class="header__link">Contact</a>
     </nav>
     
