feat(app) : create component for back button

--- a/src/app/pages/single-page-product/single-page-product.html
+++ b/src/app/pages/single-page-product/single-page-product.html
@@ -1,5 +1,5 @@
 <div class="single-page">
-    <button class="single-page__button" (click)="backToPreviousPage()">Retour</button>
+    <app-button-back/>
     <div class="single-page__container">
         <img class="single-page__image" [src]="product.imageUrl" [alt]="product.name">
         <div class="single-page__right-element">
