feat(cart-page) : create summary section

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -7,5 +7,5 @@ $darkbeige : #dfdbcc;
 $white : #FFFFFF;
 $brown : #8B5E3C;
 $black : #000000;
-$grey : #b6b6b6;
-
+$grey : #d3d3d3;
+$darkgrey : #3f3f3f;
