--- a/src/app/pages/cart-page/cart-page.scss
+++ b/src/app/pages/cart-page/cart-page.scss
@@ -1,127 +1,50 @@
 @use '../../../variables' as v;
 
 .cart {
-    margin-top: 7rem;
+    margin: 7rem auto 0 auto;
     width: 100%;
-
-    &__review {
-        margin-top: 3rem;
-    }
-
+    max-width: 747px;
+    
     &__title {
+        
+        margin: 3rem 0 1rem 0;
         font-size: 2rem;
     }
 
     &__list {
         width: 100%;
-        margin-top: 1rem;
         padding: 1rem;
         border: 1px solid v.$grey;
         border-radius: 10px;
     }
-}
 
-
-
-
-.card {
-    position: relative;
-    display: flex;
-    column-gap: 1rem;
-    width: 100%;
-
-    &__delete-button {
-        position: absolute;
-        top: 0;
-        right: 0;
-        background-color: v.$red;
-        :hover {
-            background-color: v.$darkred;
-        }
-        
-        .material-icons {
-            font-size: 1.7rem;
-            color: v.$white;
-        }
-    }
-
-    &__image {
-        width : 100px;
-        height: 100px;
-        object-fit: cover;
-        border-radius: 10px;
-    }
-}
-
-.right-section {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    min-width: 0;
-
-    &__text {
+    &__separator {
         width : 100%;
-    }
-    
-    &__title {
-        font-size: 1.8rem;
-        width: 80%;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-    }
-
-    &__category {
-        font-size: 1.5rem;
-        font-weight: 300;
-        span {
-            font-weight: 500;
+        height: 1px;
+        background-color: v.$grey;
+        margin: 2rem 0;
+        &:last-child {
+            display: none;
         }
-    }
-
-    &__purchase {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-                flex-wrap: wrap;
-    }
-
-    &__handler {
-        display: flex;
-        min-width: 0;
-        overflow: scroll;
-    }
-
-    &__price {
-        font-size: 2rem;
-    }
-    
-    &__quantity {
-        background-color: v.$beige;
-        padding: 0 1rem;
-        border-right: 1px solid v.$darkbeige;
-        border-left: 1px solid v.$darkbeige;
-        box-shadow: lightgray 3px 3px 7px;
-    }
-
-    &__button--more {
-        background-color: v.$beige;
-        border-radius: 10px 0 0 10px;
-    }
-
-    &__button--less {
-        background-color: v.$beige;
-        border-radius: 0 10px 10px 0;
     }
 }
 
-.cart__separator {
-    width : 100%;
-    height: 1px;
-    background-color: v.$grey;
-    margin: 2rem 0;
-    &:last-child {
-        display: none;
+@media screen and (min-width : 1340px) {
+
+    .cart {
+        max-width: 85%;
+        
+        &__container {
+            display: flex;
+            justify-content: space-between;
+        }
+
+        &__list {
+            width: 60%;
+        }
+    }
+
+    .app-cart-summary {
+        width: 35%;
     }
 }
