--- a/src/app/pages/cart-page/cart-page.scss
+++ b/src/app/pages/cart-page/cart-page.scss
@@ -29,6 +29,24 @@
     }
 }
 
+.empty-cart {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 5rem 0;
+    width: 100%;
+
+    &__link {
+        background-color: v.$green;
+        color: v.$white;
+        font-size: 2rem;
+        padding: 0.5rem 3rem;
+        border-radius: 10px;
+        margin-top: 2rem;
+        margin-bottom: 5rem;
+    }
+}
+
 @media screen and (min-width : 1340px) {
 
     .cart {
@@ -46,5 +64,20 @@
 
     .app-cart-summary {
         width: 35%;
+    }
+
+    .empty-cart {
+        &__title {
+            font-size: 2.5rem;
+        }
+
+        &__text {
+            font-size: 2rem;
+        }
+
+        &__link {
+            font-size: 2.5rem;
+            font-weight: 300;
+        }
     }
 }
