--- a/src/app/layouts/header/header.html
+++ b/src/app/layouts/header/header.html
@@ -16,6 +16,6 @@
     </nav>
     
     <!-- Panier -->
-    <a routerLink="panier" routerLinkActive="active" class="header__cart" >Panier (0)</a>
+    <a routerLink="panier" routerLinkActive="active" class="header__cart" >Panier ({{nbProduct}})</a>
     
 </header>
