--- a/src/app/components/toast/toast.scss
+++ b/src/app/components/toast/toast.scss
@@ -1,3 +1,5 @@
+@use '../../../variables' as v;
+
 .toast {
   position: fixed;
   top: 7rem;
@@ -5,14 +7,14 @@
   padding: 12px 20px;
   border-radius: 8px;
   font-family: 'Poppins', sans-serif;
-  font-weight: 500;
+  font-weight: 200;
   color: #fff;
   opacity: 0.95;
   transition: opacity 0.3s ease;
   z-index: 1000;
 
   &.success {
-    background-color: #28a745;
+    background-color: v.$green;
   }
 
   &.error {
