--- a/src/app/pages/product-page/product-page.scss
+++ b/src/app/pages/product-page/product-page.scss
@@ -9,6 +9,7 @@
     
     &__container {
         display: flex;
+        flex-wrap: wrap;
         justify-content: center;
     }
 
@@ -18,16 +19,17 @@
         font-size: 1.5rem;
         border-radius: 5px;
         color: v.$darkgrey;
+        margin-right: 1rem;
         &:hover {
             color: v.$black;
             box-shadow: inset 0px 2px 8px rgba(0,0,0,0.05);
         }
     }
 
-    // .active {
-    //     color: v.$black;
-    //     border: 1px solid v.$darkgrey;
-    // }
+    .active {
+        color: v.$black;
+        border: 1px solid v.$darkgrey;
+    }
 }
 
 @media screen and (min-width: 768px) {
