fix(app) : toast size and position

--- a/src/app/components/toast/toast.scss
+++ b/src/app/components/toast/toast.scss
@@ -2,13 +2,14 @@
 
 .toast {
   position: fixed;
-  top: 7rem;
+  top: 5rem;
   right: 2rem;
   padding: 12px 20px;
   border-radius: 8px;
   font-family: 'Poppins', sans-serif;
   font-weight: 200;
   color: #fff;
+  font-size: 1.5rem;
   opacity: 0.95;
   transition: opacity 0.3s ease;
   z-index: 1000;
@@ -19,5 +20,12 @@
 
   &.error {
     background-color: #dc3545;
+  }
+}
+
+@media screen and (min-width : 768px) {
+  .toast {
+    top: 7rem;
+    right: 2rem
   }
 }
