feat(cart-page) create fake purchase modal

--- a/src/app/pages/cart-page/cart-page.html
+++ b/src/app/pages/cart-page/cart-page.html
@@ -1,6 +1,8 @@
 <section class="cart">
     
     <app-button-back class="back-button"/>
+    <app-purchase-modal/>
+
     <h2 class="cart__title">Votre panier :</h2>
     <div class="cart__container">
 
