feat(modal) : create event for toggle modal

--- a/src/app/components/cart-summary/cart-summary.html
+++ b/src/app/components/cart-summary/cart-summary.html
@@ -14,6 +14,6 @@
         <p class="summary__value summary__value--total">{{total | number : '1.2-2'}} €</p>
     </div>
     @if(nbProduct > 0) {
-        <button class="summary__button">Accéder au paiement <span class="material-icons">start</span></button>
+        <button class="summary__button" (click)="openModal.emit()">Accéder au paiement <span class="material-icons">start</span></button>
     }
 </div>
