--- a/src/app/components/purchase-modal/purchase-modal.scss
+++ b/src/app/components/purchase-modal/purchase-modal.scss
@@ -15,6 +15,7 @@
 
 .purchase-modal {
     background-color: v.$beige;
+    position: relative;
     padding: 1rem;
     border-radius: 10px;
     width: 70%;
@@ -22,6 +23,16 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    &__close-button {
+        background: none;
+        box-shadow: none;
+        font-size: 2rem;
+        font-weight: 600;
+        position: absolute;
+        top: 0.5rem;
+        right: 0.5rem;
+    }
 
     &__title {
         font-family: "Poppins", sans-serif;
