--- a/src/app/pages/cart-page/cart-page.html
+++ b/src/app/pages/cart-page/cart-page.html
@@ -1,7 +1,8 @@
 <section class="cart">
     
     <app-button-back class="back-button"/>
-    <app-purchase-modal/>
+    
+    <app-purchase-modal [isVisible]="showModal" (closeModal)="toggleModal()" />
 
     <h2 class="cart__title">Votre panier :</h2>
     <div class="cart__container">
@@ -21,7 +22,7 @@
             </div>
         }
         
-        <app-cart-summary class="app-cart-summary" [nbProduct]='nbProduct'/>
+        <app-cart-summary class="app-cart-summary" [nbProduct]='nbProduct' (openModal)="toggleModal()" />
     </div>
 
 </section>
