--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -117,3 +117,18 @@
         }
     }
 }
+
+@media screen and (max-width : 360px) {
+    .presentation__title {
+        font-size: 2.5rem;
+        white-space: normal;
+        word-break: break-word;
+    }
+
+    .popular-products {
+        font-size: 2rem;
+        white-space: normal;
+        word-break: break-word;
+    }
+    
+}
