--- a/src/app/pages/product-page/product-page.scss
+++ b/src/app/pages/product-page/product-page.scss
@@ -47,9 +47,15 @@
     }
 }
 
+@media screen and (max-width : 360px) {
+    .product-filter {
+        margin-top: 12rem;
+    }    
+}
+
 
 /*---------------------------------------------------------------------------------------------------------*/
-/*----------------------------------- SECTION POPULAR PRODUCT ---------------------------------------------*/
+/*----------------------------------- SECTION ALL PRODUCTS ---------------------------------------------*/
 
 .all-products {
     margin-top: 2rem;
